--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index,follow">
     <link rel="shortcut icon" href="img/pepsivscoca.png" type="image/x-icon">
     <title>Refrigerantes</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
